src/styles.scss
@import "./themes/theme";

// Banner button size, can be changed
$bannerBtnWidth: 150px;
$bannerBtnHeight: 36px;

/// Theme. 
/// Default: Light
$close-button-color: #666666;

$banner-background-color: #F2F2F2;
$dialog-background-color: #FFFFFF;

$background-color-between-page-and-dialog: rgba(255, 255, 255, 0.6);
$dialog-border-color: #0067B8;

$radio-button-border-color: #000000;
$radio-button-checked-background-color: #000000;
$radio-button-hover-border-color: #0067B8;
$radio-button-hover-background-color: rgba(0, 0, 0, 0.8);
$radio-button-disabled-color: rgba(0, 0, 0, 0.2);
$radio-button-disabled-border-color: rgba(0, 0, 0, 0.2);

@mixin bannerFont($weight, $size, $style: normal) {
  font : {
    family: Segoe UI, SegoeUI, Arial, sans-serif;
    style: $style;
    weight: $weight;
    size: $size;
  }
}

// For right-to-left direction
@mixin rtlDesign($margin, $padding, $float: none) {
  div[dir="rtl"] & {
    margin: $margin;
    padding: $padding;
    float: $float;
  }
}

.bannerBody {
  position: relative;
  display: flex;
  z-index: 9999;          /* on top of the page */
  width: 100%;
  background-color: $banner-background-color;
  text-align: left;

  @at-root div[dir="rtl"]#{ & } {
    text-align: right;
  }
}

.bannerInform {
  margin : {
    left: 5%;
    right: 5%;
    top: 8px;
    bottom: 8px;
  }
  
  width: 45%;   /* If "calc()" is not supported */

  width: calc(85% - (#{ $bannerBtnWidth } + 3 * 4px) * 2);
}

.infoIcon {
  display: table-cell;
  padding: 12px;
  width: 24px;
  height: 24px;

  @include bannerFont(normal, 24px);
  
  /* identical to box height */
  line-height: 24px;
}

.bannerInformBody {
  display: table-cell;
  vertical-align: middle;
  
  @include bannerFont(normal, 13px);
  line-height: 16px;

  /* Add styles to hyperlinks in case websites close the default styles for hyperlinks */
  & a {
    text-decoration: underline;
  }
}

.buttonGroup {
  display: inline-block;
  align-self: center;
  position: relative;
}

.bannerButton {
  margin: 4px;
  padding: 0;

  width: $bannerBtnWidth;
  height: $bannerBtnHeight;
  
  cursor: pointer;
  @include bannerFont(normal, 15px);
  line-height: 20px;
  text-align: center;

  &:focus {
    box-sizing: border-box;
  }

  &:disabled {
    cursor: not-allowed;
  }
}

.cookieModal {
  display: none;
  position: fixed;
  z-index: 10000;   /* on top of the page */
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: $background-color-between-page-and-dialog;
  overflow: auto;
  text-align: left;

  @at-root div[dir="rtl"]#{ & } {
    text-align: right;
  }
}

.modalContainer {
  position: relative;
  top: 8%;
  margin : {
    bottom: 40px;
    left: auto;
    right: auto;
  }
  
  box-sizing: border-box;
  width: 640px;

  background-color: $dialog-background-color;
  border: 1px solid $dialog-border-color;
}

.closeModalIcon {
  float: right;
  margin: 2px;
  padding: 12px;
  border: none;

  cursor: pointer;
  @include bannerFont(normal, 13px);
  line-height: 13px;

  display: flex;
  align-items: center;
  text-align: center;
  color: $close-button-color;
  background-color: $dialog-background-color;

  @include rtlDesign(2px, 12px, left);
}

.modalBody {
  margin : {
    top: 36px;
    left: 36px;
    right: 36px;
  }
}

.modalTitle {
  margin : {
    bottom: 12px;
  }

  @include bannerFont(600, 20px);
  line-height: 24px;
  text-transform: none;
}

.modalContent {
  height: 446px;
  overflow: auto;
}

.cookieStatement {
  margin : {
    top: 0;
  }

  @include bannerFont(normal, 15px);
  line-height: 20px;

  /* Add styles to hyperlinks in case websites close the default styles for hyperlinks */
  & a {
    text-decoration: underline;
  }
}

dl.cookieOrderedList {
  margin : {
    top: 36px;
    bottom: 0;
  }
  padding: 0;

  /* Close the default styles which adds decimal numbers in front of list items */
  list-style: none;
}

dt.cookieListItem {
  margin : {
    top: 20px;
  }

  @include bannerFont(600, 18px);
  line-height: 24px;

  /* Close the default styles which adds decimal numbers in front of list items */
  list-style: none;
}

.cookieListItemGroup {
  margin: 0;
  padding: 0;
  border: none;
}

.cookieListItemTitle {
  margin: 0;
  padding: 0;
  border-bottom: none;

  @include bannerFont(600, 18px);
  line-height: 24px;
  text-transform: none;
}

.cookieListItemDescription {
  display: inline-block;
  margin : {
    top: 0;
    bottom: 16px;
  }

  @include bannerFont(normal, 15px);
  line-height: 20px;
}

.cookieItemRadioBtnGroup {
  display: block;
}

.cookieItemRadioBtnCtrl {
  display: inline-block;
  position: relative;
  left: 2px;
  margin : {
    bottom: 16px;
  }
}

.bannerBody *::before, .cookieModal *::before, .bannerBody *::after, .cookieModal *::after {
  box-sizing: inherit;
}

@mixin defineRaioInput {
  & + label::before {
    display: block;
    position: absolute;
    top: 0;
    left: 0;
    height: 19px;
    width: 19px;
    content: "";
    border-radius: 50%;
    border: 1px solid $radio-button-border-color; 
    background-color: $dialog-background-color;
  }

  &:focus + label::before {
    outline: 2px solid $radio-button-hover-background-color;
  }

  &:not(:disabled) + label {
    &:hover {
      &::before {
        border: 1px solid $radio-button-hover-border-color;
      }

      &::after {
        display: block;
        position: absolute;
        top: 5px;
        left: 5px;
        height: 9px;
        width: 9px;
        content: "";
        border-radius: 50%;
        background-color: $radio-button-hover-background-color;
      }
    }

    &:focus {
      &::before {
        border: 1px solid $radio-button-hover-border-color;
      }

      &::after {
        display: block;
        position: absolute;
        top: 5px;
        left: 5px;
        height: 9px;
        width: 9px;
        content: "";
        border-radius: 50%;
        background-color: $radio-button-checked-background-color;
      }
    }
  }

  &:checked + label::after {
    display: block;
    position: absolute;
    top: 5px;
    left: 5px;
    height: 9px;
    width: 9px;
    content: "";
    border-radius: 50%;
    background-color: $radio-button-checked-background-color;
  }

  &:disabled + label {
    cursor: not-allowed;

    &::before {
      border: 1px solid $radio-button-disabled-border-color;
      background-color: $radio-button-disabled-color;
    }
  }
}

input[type="radio"].cookieItemRadioBtn {
  display: inline-block;
  position: relative;   /* Adjust the position */
  margin : {
    top: 0;
    left: 0;
    right: 0;
  }

  border-radius: 0;

  cursor: pointer;
  outline: none;
  box-sizing: border-box;

  appearance: none;

  /* Define our own radio input in case websites close the default styles for input type radio */
  @include defineRaioInput;
}

.cookieItemRadioBtnLabel {
  display: block;
  float: right;
  padding : {
    left: 8px;
    right: 34px;
  }
  width: 80%;   /* If "calc()" is not supported */

  width: calc(100% - 19px);

  @include bannerFont(normal, 15px);
  line-height: 20px;
  /* identical to box height, or 133% */

  text-transform: none;
  cursor: pointer;
  box-sizing: border-box;

  @include rtlDesign(0 8px 0 34px, 0, left);
}

.modalButtonGroup {
  margin : {
    top: 20px;
    bottom: 48px;
  }
}

.modalButtonReset {
  padding: 0;

  width: 278px;
  height: 36px;
  
  cursor: pointer;
  @include bannerFont(normal, 15px);

  line-height: 20px;
  /* identical to box height, or 133% */
  text-align: center;

  &:focus {
    box-sizing: border-box;
  }

  &:disabled {
    cursor: not-allowed;
  }
}

.modalButtonSave {
  float: right;
  padding: 0;

  width: 278px;
  height: 36px;

  cursor: pointer;
  @include bannerFont(normal, 15px);

  line-height: 20px;
  /* identical to box height, or 133% */
  text-align: center;

  &:focus {
    box-sizing: border-box;
  }

  &:disabled {
    cursor: not-allowed;
  }

  @include rtlDesign(0 10px 0 0, 0, left);
}

@media only screen and (max-width: 800px) {
  /* For mobile phones: */
  
  .buttonGroup, .bannerInform {
    margin : {
      top: 8px;
      bottom: 8px;
      left: 3.75%;
      right: 3.75%;
    }

    width: 92.5%;
  }

  .bannerBody {
    display:block;
  }

  .bannerButton {
    margin : {
      bottom: 8px;
      left: 0;
      right: 0;
    }

    width: 100%;
  }
  
  .closeModalIcon {
    padding:3%;
  }

  .cookieModal {
    overflow: hidden;
  }

  .modalContainer {
    top: 1.8%;
    
    width: 93.33%;
    height: 96.4%;

    overflow: hidden;
  }

  .modalTitle {
    margin: {
      top: 3%;
      bottom: 3%;
    }
  }

  .modalBody {
    margin : {
      top: 3%;
      left: 3%;
      right: 3%;
      bottom: 3%;
    }

    height: 100%;
  }

  .modalBody > div:first-child {
    max-height: 25%;
    overflow: hidden;
  }

  .modalContent {
    height: 62%;   /* If "calc()" is not supported */
   
    height: calc(100% - 225px);
    min-height: 40%;
  }

  .modalButtonGroup {
    margin: {
      top: 2%;
      bottom: 2%;
    }
  }

  .modalButtonReset {
    width: 100%;
    max-height: 28px;
  }

  .modalButtonSave {
    margin : {
      bottom: 1%;
      left: 0;
    }

    width: 100%;
    max-height: 28px;

    @include rtlDesign(0 0 12px 0, 0);
  }
}

